Fix file type visual on firefox

--- a/src/IuchBundle/Resources/public/css/admin.css
+++ b/src/IuchBundle/Resources/public/css/admin.css
@@ -285,3 +285,7 @@ tspan {
 .footer-admin a {
     color: darkgray;
 }
+
+input[type="file"] {
+    padding:0;
+}
